zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_toggle_pane_frames_action-4.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 1498
expression: "format!(\"{}\", snapshot_count)"
---
3
