zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_undo_rename_pane_action-5.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 1919
expression: "format!(\"{}\", snapshot_count)"
---
4
