zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_undo_rename_pane_action-6.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 2260
expression: "format!(\"{}\", snapshot_count)"
---
5
